AG-8094 - Fix bug with code zebra stripes on Firefox

--- a/grid-packages/ag-grid-docs/documentation/src/design-system/components/_code.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/components/_code.scss
@@ -41,7 +41,6 @@ pre.code {
         padding: 0;
         background: none;
         border: none;
-        white-space: pre;
     }
 
     .token.comment,
